fix(combo-button): fix menu width on firefox

--- a/packages/styles/scss/components/combo-button/_combo-button.scss
+++ b/packages/styles/scss/components/combo-button/_combo-button.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .#{$prefix}--combo-button__primary-action .#{$prefix}--btn {
+    width: 100%;
+  }
+
   .#{$prefix}--combo-button__trigger svg {
     transition: transform $duration-fast-02 motion(standard, productive);
   }
